@@ -2,6 +2,8 @@ Cascading Change Log
 
 1.2-WIP
 
+  Changed c.c.CascadeConnector to fail if it detects cycles in the set of given c.f.Flow instances to manage.
+
   Disable Hadoop warning about not using "options parser".
 
   Added #isSource() and #isSink() methods to c.s.Scheme so that some Scheme instances can report they are either
